# the_composable_architecture_with_bazel

./: .gitignore  BUILD  MODULE.bazel  Package.resolved  Package.swift  README.md  swift_deps_index.json
AddContactFeature/: AddContactFeature.swift  AddContactView.swift
ContactDetailFeature/: ContactDetailFeature.swift  ContactDetailView.swift
ContactFoundation/: Contact.swift
ContactListFeature/: ContactListFeature.swift  ContactListView.swift
CounterFeature/: CounterFeature.swift  CounterView.swift  NumberFactClient.swift
Demo/: AddContactFeature.swift  AddContactView.swift  AppFeature.swift  AppView.swift  ContactDetailFeature.swift  ContactDetailView.swift  ContactsFeature.swift  ContactsView.swift  CounterFeature.swift  CounterView.swift  Demo.swift  DemoApp.swift  Info.plist  NumberFactClient.swift
Tests/: AppFeatureTests.swift  ContactListFeatureTests.swift  ContactsFeatureTests.swift  CounterFeatureTests.swift
